--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ li:hover {
   position: relative;
   width: 100%;
   height: 65px;
-  background: rgba(202, 202, 202, 0.9411764706);
+  background: pink;
   -webkit-box-shadow: 0 1px 5px gray;
   box-shadow: 0 1px 5px gray;
   z-index: 3;
