--- a/style.css
+++ b/style.css
@@ -119,11 +119,11 @@ li:hover {
   width: 100%;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 100;
 }
 
 @media (max-width: 767px) {
-  .header__nav::before {
+  /* .header__nav::before {
     content: "";
     position: absolute;
     width: 100%;
@@ -132,7 +132,7 @@ li:hover {
     left: 0;
     background: rgba(192, 174, 174, 0.5294117647);
     z-index: 30;
-  }
+  } */
 }
 
 .header__body {
@@ -147,15 +147,15 @@ li:hover {
   position: relative;
   width: 100%;
   height: 65px;
-  background: pink;
+  background: rgba(202, 202, 202, 0.9411764706);
   -webkit-box-shadow: 0 1px 5px gray;
   box-shadow: 0 1px 5px gray;
-  z-index: 3;
+  /* z-index: 3; */
 }
 
 @media (max-width: 767px) {
   .header__body {
-    z-index: 30;
+    /* z-index: 30; */
   }
 }
 
@@ -165,7 +165,7 @@ li:hover {
   font-size: 36px;
   font-weight: 700;
   margin-right: 1vw;
-  z-index: 3;
+  /* z-index: 3; */
 }
 
 @media (max-width: 767px) {
@@ -182,7 +182,7 @@ li:hover {
     border-radius: 20% 0 0 20%;
     -webkit-transition: 0.3s ease-in;
     transition: 0.3s ease-in;
-    z-index: 20;
+    /* z-index: 20; */
   }
 
   .header__menu.active {
@@ -191,7 +191,7 @@ li:hover {
     -webkit-transition: 0.5s ease-out;
     transition: 0.5s ease-out;
     overflow: scroll;
-    z-index: 20;
+    /* z-index: 20; */
   }
 }
 
@@ -203,7 +203,7 @@ li:hover {
   -ms-flex-align: center;
   align-items: center;
   font-size: 2vw;
-  z-index: 3;
+  /* z-index: 3; */
 }
 
 @media (max-width: 767px) {
@@ -216,7 +216,7 @@ li:hover {
     -webkit-box-align: end;
     -ms-flex-align: end;
     align-items: flex-end;
-    z-index: 20;
+    /* z-index: 20; */
   }
 
   .header__links li {
@@ -242,7 +242,7 @@ li:hover {
     left: 40%;
     height: 60px;
     width: 50px;
-    z-index: 20;
+    /* z-index: 20; */
   }
 
   .header__burger::after,
@@ -318,12 +318,12 @@ li:hover {
   background-attachment: fixed;
   position: relative;
   top: 65px;
-  z-index: 10;
+  /* z-index: 10; */
 }
 
 @media (max-width: 767px) {
   .header__background {
-    z-index: 9;
+    /* z-index: 10; */
   }
 }
 
@@ -670,7 +670,7 @@ li:hover {
 
 .col__chek {
   position: absolute;
-  z-index: 1;
+  /* z-index: 1; */
   top: 60%;
   left: 10%;
   padding: 3vw 1vw;
@@ -1068,7 +1068,7 @@ li:hover {
   transform: scale(1.15);
   -webkit-transition: 0.3s;
   transition: 0.3s;
-  z-index: 10;
+  /* z-index: 10; */
   -webkit-box-shadow: 0 0 10px 10px gray;
   box-shadow: 0 0 10px 10px gray;
 }
